--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     //compile 'com.android.support:appcompat-v7:23.0.1'
     //compile 'com.android.support:design:23.0.1'
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
