Ahora falta poner nuevamente las imagenes del menu principal, se encontro que para que no haya una doble toolbar la configuracion se busca en styles.xml  <!-- Base application theme. -->                                                                                                                                                               <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
 
             ></activity>
 
+        <activity
+            android:name=".probando"
+            android:screenOrientation="portrait" />
+
 
     </application>
 
