Sigue apareciendo el error de gms pero debemos seguir desarrollando la aplicacion. Ahora se comenzara con el modulo administrar usuario

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
             android:name=".probando"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".menu_principal"
+            android:screenOrientation="portrait" />
+
 
     </application>
 
