--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity android:name=".menu_principal"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".admusuario"
+            android:screenOrientation="portrait" />
 
     </application>
 
