Se realizo la vista del modulo administracion mascota y se le puso en el ultimo boton "quitar mascota" en vez de "Eliminar mascota"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity android:name=".admusuario"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".admmascota"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
