Se realiza vista integracion y cariño

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity android:name=".admmascota"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".integracion"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
