Terminamos el nuevo apartado "aprendamos de ellos" y collar de identificacion, solo falta el apartado de ayuda y consejos.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity android:name=".collar"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".interaccion"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
