Tenemos listo la vista de ayuda y consejos del modulo integracion y cariño, ahora solo falta incluir la informacion en la vista "aprendamos de ellos", "collar de identificacion" y "ayuda y consejos".

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         <activity android:name=".interaccion"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".ayuda_integracion"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
